# Maxm-20250801

./: CMakeLists.txt  README.md  README_with_code.md  figure  requirements.txt  start.sh  test.sh
code/: ML-IMEX_workflow_commands.md
data/: CDO_Processing.md  Download_Guides.md  Imerg_grid.txt
python/: setup.py
python/MAXM/: __init__.py  plot_utils.py  utils.py
training/: eda.py
